# challenge3

./: CNAME  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/algorithms/: activity_graph.py  carbon_factors.py  planning.py  recommendation_heap.py  trends.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: activities.py  auth.py  gamification.py  goals.py  recommendations.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: activity.py  goal.py  recommendation.py  user.py
backend/app/schemas/: activity.py  auth.py  goal.py  recommendation.py
backend/app/services/: ai.py  prediction.py  recommendations.py
backend/tests/: test_algorithms.py  test_security.py
docs/: API.md
frontend/: Dockerfile  jest.config.ts  next.config.ts  package.json  playwright.config.ts  tailwind.config.ts
frontend/__tests__/: page.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/ui/: button.tsx  card.tsx  input.tsx
frontend/e2e/: app.spec.ts
frontend/lib/: api.ts
infra/terraform/: main.tf  variables.tf
monitoring/: prometheus.yml
