[tool.poetry]
name = "carbon-platform-backend"
version = "1.0.0"
description = "FastAPI backend for Carbon Footprint Awareness Platform"
authors = ["Carbon Platform Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.31"
asyncpg = "^0.29.0"
alembic = "^1.13.2"
pydantic-settings = "^2.3.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
httpx = "^0.27.0"
redis = "^5.0.7"
prometheus-fastapi-instrumentator = "^7.0.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.8.0"}
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pytest-cov = "^5.0.0"
ruff = "^0.5.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=90"

[tool.ruff]
line-length = 120
target-version = "py311"
